Removed hover event causing issue on mobile browsers with cube images.

--- a/src/components/Cubes.css
+++ b/src/components/Cubes.css
@@ -134,7 +134,7 @@ h4 {
 .right {
   transform: translateZ(-110px) rotateY(180deg);
 }
-.zoom-img {
+/* .zoom-img {
   max-width: 100%;
 
   -moz-transition: all 0.3s;
@@ -145,7 +145,7 @@ h4 {
   -moz-transform: scale(1.1);
   -webkit-transform: scale(1.1);
   transform: scale(1.075);
-}
+} */
 
 /* ================================= 
   Media Queries
