--- a/src/components/PostSection.css
+++ b/src/components/PostSection.css
@@ -8,14 +8,14 @@
   align-items: stretch;
 }
 
-.PostSection button {
+/* .PostSection button {
   margin-top: 1rem;
   margin-top: 5rem;
   background: white;
   border: 2px solid black;
   padding: 1rem 2rem;
   cursor: pointer;
-}
+} */
 
 .PostSection button:hover {
   background: black;
