--- a/src/templates/SinglePost.css
+++ b/src/templates/SinglePost.css
@@ -33,12 +33,12 @@
 
 .SinglePost--Content {
   background: white;
-  padding: 8rem 8rem 4rem 8rem;
+  padding: 0 8rem 4rem 8rem;
 }
 
 @media screen and (max-width: 750px) {
   .SinglePost--Content {
-    padding: 4rem 2rem;
+    padding: 0 2rem;
   }
 }
 
